join_nested.result, join_nested.test:   Added a test case for bug #4922. sql_select.cc:   Blocked an optimization performed by join_read_const_table when   applied to an inner table of a nested outer join.   It was done to fix bug #4922. sql_yacc.yy:   Fixed a typo bug in the rule for join_table.